[project]
name = "fraud-detection-mlops-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc[s3]>=3.63.0",
    "fastapi>=0.116.1",
    "mlflow>=3.3.2",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "ipykernel>=6.30.1",
]
